# deconv

./: .gitignore  .gitmodules  LICENSE.txt  README.md  create_release.sh  environment.yaml  params.yaml  params2.yaml  pyproject.toml  rattler-build.sh  recipe.yaml  release.sh  requirements.txt  setup.py
DeconV/: DeconV.py  RefDataSet.py  __init__.py  plot.py  pseudo.py  tools.py
DeconV/models/: Beta.py  Gamma.py  LogNormal.py  Static.py  __init__.py  base.py
api/: api.py
app/: app.py
app/server/: __init__.py
benchmarks/: 3bulk.py  3synthetic.py  analysis.ipynb  n_genes_xin.py  ngenes.ipynb  ngenes.py  ngenes_pbmc.py  ngenes_xin.py  norm.ipynb  norm_pbmc.py  norm_xin.py  pbmc.py  pbmc_comparison.ipynb  pbmc_synthetic.py  top_ngenes_pbmc.py  top_ngenes_xin.py  xin.py  xin_comparison.ipynb
benchmarks/3bulk/: done.json  losses.txt
benchmarks/3synthetic/: done.json  losses.txt
benchmarks/ngenes_pbmc/: done.json  losses.txt
benchmarks/ngenes_xin/: done.json  losses.txt
benchmarks/norm_pbmc/: done.json  losses.txt
benchmarks/norm_xin/: losses.txt
benchmarks/pbmc/: done.json  losses.txt
benchmarks/top_ngenes_pbmc/: losses.txt
benchmarks/top_ngenes_xin/: done.json
benchmarks/xin/: done.json  losses.txt
conda.recipe/: meta.yaml
core/: base.py  deconV.py  plot.py  ptest.py
deconV/: DeconV.py  __init__.py  base.py  benchmark.py  benchmark2.py  deconV.py  plot.py  run.py  tools.py
deconV/models/: Beta.py  Gamma.py  LogNormal.py  NB.py  Static.py  base.py
deconv/: DeconV.py  __init__.py  main.py  plot.py  tools.py
deconv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: pbmc.ipynb  pbmc2.ipynb  pbmc_preprocessing.ipynb  rds_to_csv.r  xin.ipynb  xin_preprocessing.r
notebooks/: 3bulk.ipynb  afe.ipynb  benchmark.ipynb  charf.ipynb  deconV.ipynb  distributions.ipynb  dl.ipynb  fft.ipynb  gaussian.ipynb  gnn.ipynb  mixture.ipynb  models.ipynb  panci.ipynb  pbmc2.ipynb  poisson.ipynb  reg copy.ipynb  reg.ipynb  scvi.ipynb  synthetic.ipynb  viz.ipynb  xin.ipynb
preprocessing/: pbmc.ipynb  xin.r
(+380 files in other folders)
