[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deconv"]

[project]
name = "deconv"
dynamic = ["version"]
description = "Probabilistic Cell Type Deconvolution of Bulk RNA-seq"
authors = [
    { name = "Artur Gynter", email = "agynter@pm.me" }
]
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "ipykernel",
    "tqdm",
    "wheel",
    "torch",
    "torchvision",
    "torchaudio",
    "scipy",
    "matplotlib",
    "matplotlib-inline",
    "anndata",
    "scanpy",
    "numba",
    "pyro-ppl",
    "harmonypy",
    "leidenalg",
    "trimap",
    "plotly",
    "kaleido",
    "nbformat",
]

[project.scripts]
deconv = "deconv.main:main"

[project.urls]
Repository = "https://github.com/lutrarutra/deconv"
Pre-print = "https://www.biorxiv.org/content/10.1101/2023.12.07.570524v1"

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
